# zephyr

include/zephyr/bluetooth/: hci.h  iso.h
samples/TractorLight/receiver/: CMakeLists.txt  prj.conf
samples/TractorLight/sender/: CMakeLists.txt  prj.conf
samples/bluetooth/PermanentReceiver/: CMakeLists.txt  prj.conf
samples/bluetooth/PermanentSender/: CMakeLists.txt  prj.conf
samples/bluetooth/beacon/: prj.conf
samples/bluetooth/broadcaster/: prj.conf
samples/bluetooth/hci_pwr_ctrl/: prj.conf
samples/bluetooth/hci_rpmsg/: nrf5340_cpunet_iso-bt_ll_sw_split.conf  prj.conf
samples/bluetooth/iso_broadcast/: CMakeLists.txt  prj.conf
samples/bluetooth/iso_broadcast_benchmark/: prj.conf
samples/bluetooth/iso_connected_benchmark_receiver/: prj.conf
samples/bluetooth/iso_connected_benchmark_sender/: prj.conf
samples/bluetooth/iso_receive/: CMakeLists.txt  prj.conf
samples/bluetooth/periodic_adv/: prj.conf
samples/bluetooth/periodic_sync/: CMakeLists.txt  prj.conf
samples/gatcode/ExtRecv/: CMakeLists.txt  prj.conf
samples/gatcode/ExtSender/: CMakeLists.txt  prj.conf
samples/gatcode/audio/: CMakeLists.txt  prj.conf
samples/gatcode/audio/boards/: nrf52840dk_nrf52840.conf
samples/gatcode/audio/src/: main.c
samples/gatcode/ext_adv/: prj.conf  (+1 more)
samples/gatcode/iso_receive/: CMakeLists.txt  README.md  prj.conf
samples/gatcode/iso_receive/boards/: thingy53_nrf5340_cpuapp.conf  thingy53_nrf5340_cpuapp.overlay
samples/gatcode/iso_receive/include/: ble_hci_vsc.h  sync_timer.h
samples/gatcode/iso_receive/src/: ble_hci_vsc.c  main.c  sync_timer.c
(+245 files in other folders)
